# writing

./: .gitattributes  Branch-Structure.md  Features to add before beta release  Features to add before beta release.md  Features to add before full release.md  Features.md  INSIDE OUT.scr  Known-Bugs.md  LATEST_VERSION  LICENSE  README.md  Releases  Removal.md  Test.rtf  all-releases.html  daily-builds.html  index.html  index.md  screenplay.py  screenplay_2html.py  screenplay_generate_soundlist.py  screenplay_style_radioplay.py  setup.py  test-novel.py  test-screenplay.fdx  test-screenplay.md  test-screenplay.scr  test.md  test.nov  test2.md  testing_typer.py  writing.py  writing.spec  writing_backup.py
Documentation/: All settings.md  Documentation.md  Error Codes.md
Tests/: IMP.txt  Simple-Word-Zip-and-back (2).docx
css/: daily-builds.css  main.css  nightly-builds.css
daily-builds/: 1.0.0.html  2.0.0-daily-1656421075x64.html
default/: README.md
mockup/: palette.scss
tests/: Test.trelby  old.py  test.md  testing_reportlab.py  testing_typer.py  text.txt
writing/: Cargo.toml
writing-bug-fixes/: README.md
writing-feature-adding/: README.md
writing-old/: Cargo.toml
writing-python/: screenplay.py  screenplay_style_radioplay.py  (+1 more)
writing/config/: config.toml  writing.yaml
writing/config/novel/: html.xml
writing/config/screenplay/: html.xml
writing/src/: CONFIG_HANDLER.rs  Test.rs  args.rs  config.rs  error.rs  fountain_parser.rs  log.rs  main.rs  novel.rs  novel_parser.rs  screenplay.rs  setting.rs  settings.rs
writing/test/: test.trelby  test.txt
(+23 files in other folders)
