[package]
name = "writing"
version = "0.2.0"
edition = "2021"
authors = ["Cerabbite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
serde = "1.0.139"
serde_derive = "1.0.139"
toml = "0.5.9"
