[package]
name = "writing"
version = "0.2.0-alpha-nightly-1657982403"
edition = "2021"
authors = ["Cerabbite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#"3.2.12" ["derive",
[dependencies]
clap = { version = "3.2.12", features = ["yaml"] }
serde = "1.0.139"
serde_derive = "1.0.139"
toml = "0.5.9"
